packages/ui/src/components/editor/settings/Item/Item.module.scss
.container {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: var(--padding-8px);
  padding: var(--padding-12px);

  &--below {
    flex-direction: column;
    align-items: stretch;
    justify-content: flex-start;
  }
}

.content {
  flex: 1;
  display: flex;
  flex-direction: column;
  min-width: 0;
  gap: var(--padding-2px);
}

.title {
  font-weight: 600;
}

.description {
  color: var(--cwc-text-secondary);
}

.slot {
  flex-shrink: 0;
}

